# mailing_service

./: .env  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mailing/: admin.py  functions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
mailing/migrations/: 0001_initial.py  0002_rename_mail_mail_recepient_and_more.py  0003_logs_mailing_sending_time_alter_mailing_message.py
myproject/: celery.py  settings.py  urls.py
