[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["andrey-trasov <159887936+andrey-trasov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
redis = "^5.2.1"
python-telegram-bot = "^21.10"
black = "^24.10.0"
stripe = "^11.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
